--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,11 @@
         android:layout_height="wrap_content"
         android:onClick="onClick"
         android:text="ASM生成class"/>
-
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="ASM注册class"/>
 
 </LinearLayout>
